docs: Fix swagger on students handlers
